Add tasks to generate bsl classpath files and to generate IDEA run configs